2008-03-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Included a2time.h
	* src/DHTMessageDispatcher.h
	* src/DHTMessageEntry.h
	* src/DHTReplaceNodeTask.h
	* src/DHTMessageTracker.h
	* src/Util.h
	* src/CookieBox.h
	* src/SocketCore.h
	* src/DefaultBtMessageDispatcher.h
	* src/SocketCore.cc
	* src/Util.cc
	* src/DHTPingTask.h

2008-03-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed high memory footprint when DHT is enabled.
	This is not a memory leak, but DHTReplaceNodeTask is more frequently
	queued than it is processed and the queue is getting longer. As a
	consequence, momory usage is increased.
	As for a fix, instead of issuing DHTReplaceNodeTask, I've implemented
	replacement cache in DHTBucket which is described in Kademlia paper.
	* src/DHTRoutingTable.cc (addNode): Removed the issuing of
	DHTReplaceNodeTask.
	* src/DHTBucket.{h, cc}
	(cacheNode): New function.
	(getCachedNodes): New function.
	(dropNode): Push back cached node to _nodes.
	* test/DHTBucketTest.cc
	(testCacheNode): New test
	(testDropNode): New test
	
2008-03-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Allocate memory for peekBuf in initiateSecureConnection() to avoid
	the unused 4KB memory when ssl is not used.
	* src/SocketCore.cc
	
2008-03-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added summary log for peer announce storage.
	* src/DHTPeerAnnounceStorage.cc (handleTimeout)
	
	Removed cast
	* src/DefaultPeerStorage.cc (addPeer)

	Log exception message
	* src/DHTMessageTracker.cc (handleTimeout)

	Fixed casting
	* test/HttpRequestTest.cc
	* test/MetalinkProcessorTest.cc
	* test/PieceTest.cc
	* test/MetalinkEntryTest.cc
	* test/SequenceTest.cc
	
2008-03-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/ParameterizedStringParser.cc (createLoop):
	Removed unused variable sstep.

	* src/AlphaNumberDecorator.h (decode): Rewritten.

2008-03-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/Util.{h, cc}